# quant.ai

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README_CN.md  conftest.py  environment.yml  pyproject.toml  requirements.txt  roadmap.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
configs/: catalog.csv  default.yaml  full_roadmap.yaml  local_data_example.yaml  recommended.yaml  universe_default.csv  walk_forward_recommended.yaml
quant_agent/: __init__.py  __main__.py  adapters.py  agents.py  alerts.py  analyze.py  approvals.py  backtest.py  broker.py  cli.py  comparison.py  config.py  config_tools.py  dashboard.py  data.py  data_quality.py  features.py  i18n.py  llm.py  market_intel.py  markets_data.py  mcp_server.py  metrics.py  ml.py  notifications.py  onboarding.py  optimization.py  paper.py  pipeline.py  portfolio.py  recommendations.py  reports.py  risk.py  server.py  web_templates.py
quant_agent/web/: _ds_bundle.js  styles.css
quant_agent/web/tokens/: colors.css  effects.css  fonts.css  spacing.css  typography.css
quant_agent/web/ui_kits/markets/: app.jsx  chrome.jsx  index.html
reference/: 01_github_projects.md  02_agent_architecture_notes.md  03_data_and_evaluation_checklist.md  04_source_links.md  README.md
tests/: _helpers.py  test_analyze.py  test_config.py  test_data.py  test_market.py  test_onboarding.py  test_pipeline.py  test_server.py
tests/fixtures/: prices.csv
